--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="container secundario">
-        <img src="/Images/Notebook.png" alt="Imagem notebook">
+        <img src="Images/Notebook.png" alt="Imagem notebook">
             <div class="container__descricao">
                 <h2 class="descricao__titulo">Baixe seus cursos</h2>
                 <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
@@ -50,22 +50,22 @@
         <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
             <li>
-                <img src="/Assets/tv.png" alt="Icone Televisão">
+                <img src="Assets/tv.png" alt="Icone Televisão">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="/Assets/computador.png" alt="Icone Computador">
+                <img src="Assets/computador.png" alt="Icone Computador">
                 <h3 class="lista__item">Computadores</h3>
             </li>
             <li>
-                <img src="/Assets/celular.png" alt="Icone Celular">
+                <img src="Assets/celular.png" alt="Icone Celular">
                 <h3 class="lista__item">Celulares</h3>
             </li>
         </ul>
     </section>
 
     <footer class="rodape">
-        <img src="/Assets/Logo.png" alt="Logo" class="rodape__logo">
+        <img src="Assets/Logo.png" alt="Logo" class="rodape__logo">
         <ul class="rodape__lista">
             <li class="lista__link">
                 <a href="#">Idioma</a>
